--- a/MessengerServer/MessengerServer.vcxproj.filters
+++ b/MessengerServer/MessengerServer.vcxproj.filters
@@ -15,21 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ProtobufFormatV1.porto.pb.h">
+    <ClInclude Include="Messenger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="dllapi.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Server.h">
+    <ClInclude Include="MemoryMessenger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="dllmain.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ProtobufFormatV1.porto.pb.cc">
+    <ClCompile Include="MemoryMessenger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
